Update and rename css /style.css to  css /style.css

--- a/css /style.css
+++ b/css /style.css
@@ -1,2 +1,4 @@
-cursor: url(images/cursor/cursor.cur), default;
-cursor:url(images/cursor/cursor2.cur), pointer;
+body {
+  cursor: url(images/cursor/cursor.cur), default;
+  cursor:url(images/cursor/cursor2.cur), pointer;
+}
