--- a/css /style.css
+++ b/css /style.css
@@ -1,4 +1,3 @@
 body {
-  cursor: url(images/cursor/cursor.cur), default;
-  cursor:url(images/cursor/cursor2.cur), pointer;
+  cursor: url(images/cursor/cursor.cur), url(images/cursor/cursor2.cur), default;
 }
