Update and rename css /style.css to  css /style.css

--- a/css /style.css
+++ b/css /style.css
@@ -1,6 +1,6 @@
 div {
   color: white;
   background-color: white;
-  background: url(logo_icon.ico) no-repeat;
+  background: url(images/daka-dibuja-8-atardecer.jpg) no-repeat;
   background-size: cover;
 }
