--- a/css /style.css
+++ b/css /style.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .overhead {
