--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 	position: absolute;
 	border-radius: 500px;
 	box-shadow: 0 0 0 3px orange;
-	left: 380px;
+	left: 27%;
 	top: 5%;
 }
 
@@ -47,7 +47,41 @@ body {
 hr {
 	color: orange;
 	position: absolute;
-	width: 99%;
+	width: 1406px;
 	top: -8px;
 	border: 3px double orange;
+}
+
+.button-social {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    width: 100%;
+    height: 60px;
+    overflow: hidden;
+    flex-direction: ряд;
+	position: absolute;
+	top: 46%;
+}
+
+.button-social div {
+	position: relative;
+	top: -40px;
+    margin: 50px;
+	transition: transform 0.25s;
+}
+
+.button-social div:hover {
+	transform: scale(1.2);
+	filter: opacity(50deg);
+}
+
+.button-social-image {
+	width: 40px;
+}
+
+.button-use {
+	color: transparent;
+	background-color: transparent;
+	border: none;
 }
