--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 	margin: 0;
-	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	user-select: none; 
 }
 
 .overhead {
@@ -8,19 +9,20 @@ body {
 	color: white;
 	position: relative;
 	top: 175px;
-	height: 809px;
+	height: 1200px;
 }
 
 .overhead-desc {
 	position: relative;
-	height: 14%;
+	height: auto;
 	width: 50%;
 	left: 25%;
-	top: 27%;
+	top: 16.5%;
 	text-align: justify;
 	font-size: 20px;
 	border: 3px double orange;
 	padding: 10px;
+	overflow: hidden;
 }
 
 .orange {
@@ -33,23 +35,24 @@ body {
 	border-radius: 500px;
 	box-shadow: 0 0 0 3px orange;
 	left: 27%;
-	top: 5%;
+	top: 2%;
 }
 
 .overhead-name {
 	color: white;
 	position: absolute;
-	left: 550px;
-	top: 40px;
+	left: 39%;
+	top: 1.5%;
 	font-size: 50px;
 }
 
 hr {
 	color: orange;
 	position: absolute;
-	width: 1406px;
+	width: 99.7%;
 	top: -8px;
 	border: 3px double orange;
+	overflow: hidden;
 }
 
 .button-social {
@@ -59,9 +62,8 @@ hr {
     width: 100%;
     height: 60px;
     overflow: hidden;
-    flex-direction: ряд;
 	position: absolute;
-	top: 46%;
+	top: 31%;
 }
 
 .button-social div {
@@ -73,7 +75,6 @@ hr {
 
 .button-social div:hover {
 	transform: scale(1.2);
-	filter: opacity(50deg);
 }
 
 .button-social-image {
@@ -84,4 +85,69 @@ hr {
 	color: transparent;
 	background-color: transparent;
 	border: none;
+}
+
+.object {
+	height: 650px;
+	display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+	position: relative;
+	top: 350px;
+}
+
+.object-core {
+	overflow: hidden;
+	border: 3px double orange;
+	margin: 15px;
+	width: 500px;
+	height: 600px;
+}
+
+.object-core-cube {
+	background-color: orange;
+	width: 80px;
+	height: 80px;
+	margin: 5px;
+	position: relative;
+	top: -238px;
+}
+
+.object-core-rectangle {
+	background-color: orange;
+	position: relative;
+	left: 90px;
+	top: -323px;
+	width: 342px;
+	height: 35px;
+}
+
+.object-core-text {
+	position: relative;
+	left: 90px;
+	top: -320px;
+	height: 45px;
+	width: 342px;
+	text-align: justify;
+	line-height: 1.2;
+}
+
+.object-core-name {
+	position: relative;
+	font-size: 25px;
+	left: 5px;
+}
+
+.object-core-image {
+	width: 95.5%;
+	position: relative;
+	left: 2.25%;
+	top: 59.5%;
+}
+
+.object-core-logo {
+	width: 70px;
+	position: relative;
+	left: 5px;
+	top: 5px;
 }
